<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.glowroot</groupId>
    <artifactId>glowroot-parent</artifactId>
    <version>0.13.7-SNAPSHOT</version>
    <relativePath>../../..</relativePath>
  </parent>

  <artifactId>glowroot-agent-servlet-plugin</artifactId>

  <name>Glowroot Agent Servlet Plugin</name>
  <description>Glowroot Agent Servlet Plugin</description>

  <dependencies>
    <dependency>
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-plugin-api</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <!-- need 3.0 for testing since Tomcat 7 (below) uses Servlet API 3.0,
        but need to be careful not to use method not present in 2.x -->
      <version>3.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-core</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.ning</groupId>
      <artifactId>async-http-client</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-jasper</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-logging-juli</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <!-- Spring 5+ requires Java 8+ -->
      <version>4.3.26.RELEASE</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- optional dependency of spring-test that is required by
        org.springframework.mock.web.MockHttpServletRequest -->
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <!-- Spring 5+ requires Java 8+ -->
      <version>4.3.26.RELEASE</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <!-- jetty 9 uses Servlet API 3.1.0 which conflicts with Tomcat 7 (which uses 3.0) -->
      <!-- jetty 8.2 requires Java 7+ which causes "force-java6" profile below to fail -->
      <version>8.1.22.v20160922</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- executor plugin is included to test async servlets -->
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-executor-plugin</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <!-- this is just so eclipse will use Java 7 for this module, since Java 7 is needed for
            running tests in eclipse because some tests depend on the executor plugin which targets
            Java 7 for default-testCompile just so eclipse will use Java 7 for that module, in order
            to run that module's own ForkJoinPool tests -->
          <artifactId>maven-compiler-plugin</artifactId>
          <executions>
            <execution>
              <id>default-testCompile</id>
              <configuration>
                <source>1.7</source>
                <target>1.7</target>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>auto-activated-test-unshaded</id>
      <activation>
        <property>
          <name>!glowroot.test.shaded</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.glowroot</groupId>
          <artifactId>glowroot-agent-it-harness-unshaded</artifactId>
          <version>${project.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>auto-activated-test-shaded</id>
      <activation>
        <property>
          <name>glowroot.test.shaded</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.glowroot</groupId>
          <artifactId>glowroot-agent-it-harness</artifactId>
          <version>${project.version}</version>
          <scope>test</scope>
          <exclusions>
            <exclusion>
              <!-- exclusion is needed due to https://issues.apache.org/jira/browse/MSHADE-206 -->
              <groupId>org.glowroot</groupId>
              <artifactId>glowroot-agent-it-harness-unshaded</artifactId>
            </exclusion>
            <exclusion>
              <!-- exclusion is needed due to https://issues.apache.org/jira/browse/MSHADE-206 -->
              <groupId>org.glowroot</groupId>
              <artifactId>glowroot-agent-core</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>test-java6</id>
      <activation>
        <property>
          <name>glowroot.test.java6</name>
        </property>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <artifactId>maven-compiler-plugin</artifactId>
              <executions>
                <execution>
                  <id>default-testCompile</id>
                  <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                  </configuration>
                </execution>
              </executions>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>java6or7</id>
      <activation>
        <jdk>[1.6,1.8)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <!-- this is needed when building with Java 6 or 7 -->
              <argLine>-XX:MaxPermSize=128m</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
